# aegis-discord-spam-detect

./: .gitignore  README.md  pyproject.toml  spam_detector.py
