[project]
name = "discord-spam"
version = "0.1.0"
description = "LSTM-based spam detection for Discord messages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.19.5",
    "tensorflow>=2.6.0",
    "scikit-learn>=0.24.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
